@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1658 using contribution from Edward Kuns [edward.kuns@aspect.com]
+       Clean up compilation complaint -- Java 5 varargs complaint
+       Details: http://jira.codehaus.org/browse/CASTOR-1658
+       (Edward - 20061024)
+
 XML:   Resolved issue CASTOR-1655 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Fixed broken code sample in XML best practice document.
        Details: http://jira.codehaus.org/browse/CASTOR-1655
